--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "@begin/validator": "^1.0.1",
     "@enhance/arc-plugin-enhance": "^9.1.4",
+    "@enhance/custom-element": "^1.2.1",
     "@enhance/form-elements": "^1.1.0",
+    "@enhance/morphdom-mixin": "^1.1.1",
     "@enhance/styles-cribsheet": "^0.0.9"
   }
 }
